<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@android:color/white"
    tools:context="com.thanhtran.redstring.activities.LoginActivity">

    <LinearLayout
        android:id="@+id/base_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <LinearLayout
            android:id="@+id/logo_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:id="@+id/imageView"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/logo"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="@string/app_name"
                android:textSize="@dimen/abc_text_size_large_material"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/login_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/user_name_field"
                android:layout_width="@dimen/login_edit_text_width"
                android:background="@drawable/bg_login_field"
                android:textColorHint="@color/hint_text_color"
                android:textCursorDrawable="@null"
                android:textColor="@color/primary"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:layout_marginBottom="@dimen/ui_element_separation" />

            <EditText
                android:id="@+id/password_field"
                android:background="@drawable/bg_login_field"
                android:layout_width="@dimen/login_edit_text_width"
                android:textColorHint="@color/hint_text_color"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textCursorDrawable="@null"
                android:textColor="@color/primary"
                android:hint="@string/password_hint" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/login_buttons_top_margin">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/login_btn_width"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_login"
                android:text="@string/login"
                android:textColor="@color/primary_light"/>

            <View
                android:layout_width="@dimen/login_button_separation"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="@dimen/login_btn_width"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_login"
                android:text="@string/sign_up"
                android:textColor="@color/primary_light"/>
        </LinearLayout>
        <Button
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/forgot_password"
            android:id="@+id/btnForgotPassword"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>




</RelativeLayout>
